# vecDir

./: .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.js  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20251205113555_init_schema.sql
src-tauri/src/: ai.rs  database.rs  events.rs  indexer.rs  lib.rs  main.rs  search.rs  state.rs  vector_database.rs  vector_store.rs
src-tauri/src/ai/: embedding.rs  llamacpp.rs  vecbox.rs
src-tauri/src/ai/embedding/: multimodal_llamacpp.rs  vecbox.rs
src-tauri/src/database/: chunks.rs  commands.rs  config.rs  files.rs  init.rs  models.rs  spaces.rs
src-tauri/src/indexer/: chunker.rs  commands.rs  crawler.rs  indexer.rs  processor.rs
src-tauri/src/os/: commands.rs
src-tauri/src/search/: commands.rs  embedding.rs
src-tauri/src/status/: events.rs
src-tauri/src/vector_database/: init.rs  ops.rs  schema.rs
src-tauri/src/vector_store/: init.rs  manager.rs
src/components/header/: header.tsx  spaces.tsx
src/components/index/: initializing.tsx  logo.tsx  main.tsx  rootsList.tsx  spaceSettings.tsx
src/components/roots/: indexedRoots.tsx
src/components/search/: descriptions.tsx  pathnames.tsx  search.tsx  vectors.tsx  vectorsGrid.tsx
src/hooks/: useBackendReady.ts
src/routes/: _root.tsx  about.tsx  createSpace.tsx  index.tsx  root.tsx  settings.tsx
src/store/: storage.ts  store.ts
src/types/: config.ts
(+33 files in other folders)
