[package]
name = "vecdir"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vecdir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "chrono" ] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
usearch = "2.21.4"
anyhow = "1.0.100"
ignore = "0.4.25"
dashmap = "6.1.0"
async-openai = { version = "0.31.1", features = ["responses", "embedding", "chat-completion", "chat-completion-types"] }
specta = { version = "=2.0.0-rc.22", features = ["derive", "chrono", "serde"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
base64 = "0.22.1"
mime_guess = "2.0.5"
